[package]
name = "screenshot_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "^0.26.1"
scrap = "^0.5"
mouse-rs = { git = "https://github.com/AltF02/mouse-rs" }
image = "^0.24.0"
dirs = "^4.0.0"