[package]
name = "screenshot_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "^0.26.1"
wgpu = "^0.12.0"
image = "^0.24.0"
dirs = "^4.0.0"
pollster = "^0.2.5"
clipboard-ext = "^0.2.0"
bytemuck = { version = "1.4", features = [ "derive" ] }